--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -29,6 +29,18 @@ header {
 	text-align: center;
 }
 
+.topnav a {
+	text-decoration: none;
+	color: #000;
+	opacity: 0.90;
+}
+
+.topnav a:hover {
+	text-decoration: underline;
+	color: #000;
+	opacity: 0.90;
+}
+
 #navbar-topright {
 	float: right;
 	/*background-color: #999999;*/
@@ -36,7 +48,7 @@ header {
 	margin-top: 10px;
 }
 
-#sign-in {
+#sign-in, #sign-in a {
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -44,7 +56,8 @@ header {
 	color: #FFFFFF;
 	opacity: 1;
 	font-weight: bold;
-	padding: 0 13px;
+	padding: 0 7px;
+	text-decoration: none;
 }
 
 #top-whitespace {
